# Vantadb

./: .connectome_profile  .dockerignore  .env.example  .env.tokens.example  .gitattributes  .gitignore  .lsan_suppressions  .mailmap  .markdownlint-cli2.yaml  .markdownlint.json  AGENTS.md  ARQUITECTURA_Y_REORGANIZACION_PLAN.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CLA_CORPORATE.md  CLA_INDIVIDUAL.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.bench  FUTURE_MODIFICATIONS_ROADMAP.md  Justfile  LICENSE  PlanDeAccion.md  README.MD  README_ES.md  Roadmap.md  SECURITY.md  SKILLS-MANIFEST.md  VantaDB_Plan_Maestro_Ejecutivo.md  VantaDB_Plan_Maestro_Unificado.md  agent.md  analisis_proyecto.md  auditoria-workflows.md  build.rs  chaos_results.json  cliff.toml  clippy_output.txt  (+29 more)
.config/: nextest.toml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  clabot-config.json  dependabot.yml  pull_request_template.md
.opencode/: AGENTS.md  BACKLOG-PIPELINE.md  VANTADB-OPERATING-MANUAL.md
Formula/: README.md  vantadb.rb
archive/experimental-quarantine-2024-06/experimental-governance/: Cargo.toml
archive/experimental-quarantine-2024-06/experimental-governance/src/: consistency.rs  lib.rs  maintenance_worker.rs
benches/: backend_compare.rs  bench_concurrent.rs  high_density.rs  hnsw_pure.rs  hnsw_recall_ef.rs  hybrid_queries.rs  stress_test.rs  tokenizer_bench.rs
benchmarks/: WASM_BENCHMARK_REPORT.md  batch_vs_sequential_bench.py  competitive_bench.py  criterion_baseline.json  prefetch_comparison.py  update_markdown.py  vantadb_local_bench.py  wasm_bench.mjs
business/: benchmarks_public.md  docs_strategy.md  gtm_timeline.md  investor_pitch.md  marketing.md  monetizacion_estrategia.md  monetization.md  roadmap_v2.md  strategy.md
complete/: .gitkeep  22_Lisp_Cognition.md  26_Bayesian_Forgetfulness.md  27_Hardware_Adapters.md  32_Hard_Urgency_NMI.md
completions/: _vanta-cli  _vanta-cli.ps1  vanta-cli.bash  vanta-cli.fish
dev-tools/: audit-all.ps1  chaos_loop.ps1  collect_code.ps1  create_github_issues.ps1  nocturnal_suite.ps1  rename_config.ps1  rename_py.ps1  rename_src.ps1  rename_tests.ps1  run_audit_tests.ps1  (+5 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_archive.rs  fuzz_node_deserialize.rs  fuzz_parser.rs  fuzz_wal.rs
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/tests/: test_vectorstore.py
integrations/crewai/vantadb_crewai/: __init__.py  vectorstore.py
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/tests/: test_vectorstore.py
integrations/langchain/vantadb_langchain/: __init__.py  vectorstore.py
integrations/llamaindex/: README.md  pyproject.toml
integrations/llamaindex/tests/: test_vectorstore.py
integrations/llamaindex/vantadb_llamaindex/: __init__.py  vectorstore.py
integrations/ollama/: README.md  pyproject.toml
integrations/ollama/tests/: test_vectorstore.py
integrations/ollama/vantadb_ollama/: __init__.py  vectorstore.py
vantadb-dspy/: Cargo.toml  README.md  vantadb_dspy.pyi
vantadb-dspy/src/: lib.rs  python.rs
vantadb-dspy/tests/: test_dspy.py
vantadb-enterprise/: Cargo.toml
vantadb-enterprise/src/: audit.rs  config.rs  encryption.rs  lib.rs  license.rs  rbac.rs  replication.rs
vantadb-haystack/: Cargo.toml  README.md  vantadb_haystack.pyi
vantadb-haystack/src/: lib.rs  python.rs
vantadb-haystack/tests/: test_haystack.py
vantadb-langchain/: Cargo.toml  README.md  vantadb_langchain.pyi
vantadb-langchain/src/: lib.rs  python.rs
vantadb-langchain/tests/: test_langchain.py
vantadb-letta/: Cargo.toml  README.md  vantadb_letta.pyi
vantadb-letta/src/: lib.rs  python.rs
vantadb-letta/tests/: test_letta.py
vantadb-litellm/: Cargo.toml  README.md  vantadb_litellm.pyi
vantadb-litellm/src/: lib.rs  python.rs
vantadb-litellm/tests/: test_litellm.py
vantadb-llamaindex/: Cargo.toml  README.md  vantadb_llamaindex.pyi
vantadb-llamaindex/src/: lib.rs  python.rs
vantadb-llamaindex/tests/: test_llamaindex.py
vantadb-mcp/: Cargo.toml
vantadb-mcp/src/: lib.rs
vantadb-mcp/tests/: mcp_tests.rs
vantadb-mem0/: Cargo.toml  README.md  vantadb_mem0.pyi
vantadb-mem0/src/: lib.rs  python.rs
vantadb-mem0/tests/: test_mem0.py
vantadb-ollama/: Cargo.toml  README.md  vantadb_ollama.pyi
vantadb-ollama/src/: lib.rs  python.rs
vantadb-ollama/tests/: test_ollama.py
vantadb-openai/: Cargo.toml  README.md  vantadb_openai.pyi
vantadb-openai/src/: lib.rs  python.rs
vantadb-openai/tests/: test_openai.py
vantadb-python/: .connectome_profile  Cargo.toml  Cargo_test.toml  README.md  pyproject.toml  sanity_check.py  smoke_test_extended.py  verify_published_wheel.py
vantadb-python/src/: lib.rs  types.rs
vantadb-python/test_load_db_4cbc46ae/data/: vanta.wal
vantadb-python/test_load_db_4cbc46ae/keyspaces/0/: current  v1  v10  v11  v12  v2  v3  v4  v5  v6  v7  v8  v9
vantadb-python/test_load_db_4cbc46ae/keyspaces/0/tables/: 0  1  10  2  3  4  5  6  7  8  9
vantadb-python/test_nexus_db/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
vantadb-python/test_vanta_db/data/: vanta.wal
vantadb-python/test_vanta_db/keyspaces/0/: current  v1  v10  v11  v12  v2  v3  v4  v5  v6  v7  v8  v9
vantadb-python/test_vanta_db/keyspaces/0/tables/: 10  9
vantadb-python/tests/: test_load.py  test_perf_15_16.py  test_sdk.py
vantadb-python/vantadb_py/: .gitignore  __init__.py  __init__.pyi  vantadb_native.pyi  vantadb_py.pyi
vantadb-python/vantadb_py/migrate/: __init__.py  chroma.py  lancedb.py
vantadb-server/: Cargo.toml
vantadb-server/src/: lib.rs  main.rs  mcp.rs  middleware.rs  server.rs
vantadb-server/tests/: benchmarks.rs  e2e.rs  mcp_integration.rs  server.rs
vantadb-server/tests/api/: server.rs
vantadb-server/tests/helpers/: mod.rs
vantadb-wasm/: Cargo.toml
vantadb-wasm/demo/: README.md  app.js  index.html  package.json
vantadb-wasm/src/: idb.rs  idb_bridge.js  lib.rs  opfs.rs  opfs_bridge.js  simd.rs  worker.rs
vantadb-wasm/tests/: wasm_tests.rs  wasm_tests.tmp
(+1628 files in other folders)
