[package]
name = "vantadb"
version = "0.1.4"
edition = "2021"
rust-version = "1.94.1"
description = "VantaDB: An embedded persistent memory and vector retrieval engine for local-first AI applications."
license = "Apache-2.0"
readme = "README.MD"
keywords = ["database", "vector", "graph", "embedded", "rust"]
categories = ["database-implementations"]


[dependencies]
# ── Core ──
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
bincode = "1.3"
thiserror = "2"
parking_lot = "0.12"
zerocopy = { version = "0.8", features = ["derive"] }

# ── Parser + Storage ──
rand = "0.8"
nom = "7"
num-traits = "0.2"
arrow = { version = "58", features = ["ipc"] }
rocksdb = { version = "0.22", default-features = false, features = ["lz4"] }
fjall = "3.1"

# ── Async + Integrations + Server ──
tokio = { version = "1", features = ["sync", "rt"] }
crc32c = "0.5"
reqwest = { version = "0.13", features = ["json", "blocking"], optional = true }
serde_json = "1.0"
prometheus = "0.14"
pyo3 = { version = "0.24.1", features = ["extension-module"], optional = true }
wide = "=1.2.0"
cpufeatures = "0.3"
sysinfo = "0.30"
memmap2 = "0.9"
fs2 = "0.4"

# ── Console UX ──
indicatif = { version = "0.17", optional = true }
console = { version = "0.15", optional = true }
rayon = "1.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
twox-hash = "2.1.2"

[features]
default = ["cli"]
cli = ["dep:indicatif", "dep:console"]
llm = ["reqwest"]
governance = []
python_sdk = ["pyo3", "experimental"]
# === EXPERIMENTAL (no usar en producción) ===
experimental = ["eval", "executor", "parser", "graph", "mcp"]
# Módulos experimentales individuales (para desarrollo)
eval = []
executor = []
parser = []
graph = []
mcp = []
custom-allocator = ["mimalloc"]

[dependencies.mimalloc]
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"
[dev-dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "fs",
    "macros",
    "io-util",
] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http = "1"
futures = "0.3"
console = "0.15"
indicatif = "0.17"
proptest = "1" # ← Añadido: Property-based testing para fuzzing cross-platform

[[bench]]
name = "hybrid_queries"
harness = false

[[bench]]
name = "high_density"
harness = false

[[bench]]
name = "stress_test"
harness = false

[[bench]]
name = "hnsw_pure"
harness = false

[[bin]]
name = "vanta-cli"
path = "src/bin/vanta-cli.rs"
test = false
required-features = ["cli"]

# ── Integration Tests ─────────────────────────────────────────────
[[test]]
name = "basic_node"
path = "tests/core/basic_node.rs"

[[test]]
name = "integration"
path = "tests/logic/integration.rs"
required-features = ["experimental"]


[[test]]
name = "vector_scale_check"
path = "tests/core/vector_scale_check.rs"

[[test]]
name = "mutations"
path = "tests/storage/mutations.rs"

[[test]]
name = "core_invariants"
path = "tests/storage/core_invariants.rs"

[[test]]
name = "tombstone_ann_vstore"
path = "tests/storage/tombstone_ann_vstore.rs"

[[test]]
name = "chaos_integrity"
path = "tests/storage/chaos_integrity.rs"

[[test]]
name = "parser"
path = "tests/logic/parser.rs"
required-features = ["experimental"]

[[test]]
name = "executor"
path = "tests/logic/executor.rs"
required-features = ["experimental"]

[[test]]
name = "graph"
path = "tests/core/graph.rs"
required-features = ["experimental"]

[[test]]
name = "storage"
path = "tests/storage/storage.rs"

[[test]]
name = "hnsw"
path = "tests/core/hnsw.rs"

[[test]]
name = "gc"
path = "tests/storage/gc.rs"

[[test]]
name = "governor"
path = "tests/logic/governor.rs"
required-features = ["experimental"]


[[test]]
name = "hardware_profiles"
path = "tests/certification/hardware_profiles.rs"

[[test]]
name = "structured_api_v2"
path = "tests/api/structured_api_v2.rs"
required-features = ["experimental"]

[[test]]
name = "columnar"
path = "tests/logic/columnar.rs"
required-features = ["experimental"]

[[test]]
name = "mmap_index"
path = "tests/storage/mmap_index.rs"

[[test]]
name = "stress_protocol"
path = "tests/certification/stress_protocol.rs"

[[test]]
name = "hnsw_validation"
path = "tests/certification/hnsw_validation.rs"

[[test]]
name = "hnsw_recall_certification"
path = "tests/certification/hnsw_recall.rs"

[[test]]
name = "sift_validation"
path = "tests/certification/sift_validation.rs"

[[test]]
name = "competitive_bench"
path = "tests/certification/competitive_bench.rs"

[[test]]
name = "hybrid_retrieval_quality"
path = "tests/certification/hybrid_retrieval_quality.rs"

[[test]]
name = "backend_tests"
path = "tests/storage/backend_tests.rs"

[[test]]
name = "wal_resilience"
path = "tests/storage/wal_resilience.rs"

[[test]]
name = "durability_recovery"
path = "tests/durability_recovery.rs"

[[test]]
name = "index_reconstruction"
path = "tests/index_reconstruction.rs"

[[test]]
name = "schema_evolution"
path = "tests/schema_evolution.rs"

[[test]]
name = "concurrency_parity"
path = "tests/concurrency_parity.rs"

[[test]]
name = "python_sdk_boundary"
path = "tests/api/python.rs"

[[test]]
name = "memory_telemetry"
path = "tests/memory_telemetry.rs"

[[test]]
name = "memory_api"
path = "tests/memory_api.rs"

[[test]]
name = "memory_export_import"
path = "tests/memory_export_import.rs"

[[test]]
name = "derived_indexes"
path = "tests/derived_indexes.rs"

[[test]]
name = "memory_brutality"
path = "tests/memory_brutality.rs"

[[test]]
name = "derived_index_prefix_scan"
path = "tests/derived_index_prefix_scan.rs"

[[test]]
name = "derived_index_recovery"
path = "tests/derived_index_recovery.rs"

[[test]]
name = "operational_metrics"
path = "tests/operational_metrics.rs"

[[test]]
name = "text_index_recovery"
path = "tests/text_index_recovery.rs"

[[test]]
name = "version_coherence"
path = "tests/version_coherence.rs"

[[test]]
name = "benchmark_internal"
path = "tests/benchmark_internal.rs"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

# Fast dev profile: balance between compilation speed and runtime performance.
# opt-level=1 gives ~35% faster builds than 0 while keeping debug usable.
# debug=1 emits line tables only (no full debug var info).
[profile.dev]
opt-level = 1
debug = 1
strip = "none"

# CI profile: release-like but without LTO for faster CI builds.
[profile.ci]
inherits = "release"
lto = "off"
codegen-units = 16
opt-level = 2

[workspace]
members = [".", "vantadb-python", "vantadb-server"]
# fuzz/ is intentionally excluded: cargo-fuzz requires nightly + Linux sanitizers.
# Run with: cargo +nightly fuzz run <target>  (in the fuzz/ directory on Linux)
exclude = ["fuzz"]

[profile.test]
debug = 0
opt-level = 0
