[package]
name = "vantadb"
version = "0.2.0"
edition = "2021"
rust-version = "1.94.1"
description = "VantaDB: An embedded persistent memory and vector retrieval engine for local-first AI applications."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ness-e/Vantadb"
homepage = "https://vantadb.dev"
documentation = "https://docs.rs/vantadb"
keywords = ["database", "vector", "graph", "embedded", "rust"]
categories = ["database-implementations"]
exclude = ["test/"]
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# ── Core ──
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
postcard = { version = "1.1", features = ["alloc"] }
thiserror = "2"
parking_lot = "0.12"
lru = "0.12"
dashmap = "6"
arc-swap = "1.7"
zerocopy = { version = "0.8", features = ["derive"] }
smallvec = "1.15"

# ── Parser + Storage ──
rand = "0.9"
nom = "7"
subtle = "2.6"
arrow = { version = "58", features = ["ipc"], optional = true }
rocksdb = { version = "0.22", default-features = false, features = ["lz4"], optional = true }
fjall = { version = "3.1", optional = true }

# ── Async + Integrations + Server ──
crc32c = "0.5"
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
serde_json = "1.0"
prometheus = { version = "0.14", optional = true }
pyo3 = { version = "0.29", features = ["extension-module", "chrono"], optional = true }
wide = ">=1.2, <2"
sysinfo = { version = "0.30", optional = true }
memmap2 = { version = "0.9", optional = true }
fs2 = { version = "0.4", optional = true }

# ── HTTP Server (optional, behind feature = "server") ──
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "signal", "macros"], optional = true }
axum = { version = "0.8", optional = true }
tower_governor = { version = "0.8", optional = true }
tower-http = { version = "0.6.11", features = ["trace"], optional = true }
axum-server = { version = "0.7", optional = true, features = ["tls-rustls"] }
rustls = { version = "0.23", optional = true }
opentelemetry_sdk = { version = "0.32.1", optional = true }
opentelemetry-otlp = { version = "0.32.0", optional = true, features = ["grpc-tonic", "trace"] }

# ── Console UX ──
indicatif = { version = "0.18", optional = true }
console = { version = "0.16", optional = true }
clap = { version = "4.4", features = ["derive", "env"], optional = true }
clap_complete = { version = "4.4", optional = true }
rayon = { version = "1.12", optional = true }
tracing = "0.1"
notify = { version = "8", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
twox-hash = "2.1.2"
fail = { version = "0.5", optional = true, features = ["failpoints"] }
opentelemetry = { version = "0.32.0", optional = true }
tracing-opentelemetry = { version = "0.33.0", optional = true }
tantivy = { version = "0.22", optional = true, features = ["stopwords"] }
web-time = "1.1.0"
bloomfilter = { version = "3", optional = true }

# ── Encryption (optional, behind feature = "encryption") ──
aes-gcm = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
default = ["cli", "arrow", "rocksdb", "fjall", "sysinfo", "memmap2", "fs2", "prometheus", "rayon", "advanced-tokenizer"]
async-ingestion = ["dep:tokio", "tokio/sync", "tokio/macros", "tokio/rt"]
async-io = ["dep:tokio", "tokio/fs", "tokio/io-util"]
arrow = ["dep:arrow"]
rocksdb = ["dep:rocksdb"]
fjall = ["dep:fjall"]
cli = ["dep:indicatif", "dep:console", "dep:clap", "dep:clap_complete"]
failpoints = ["dep:fail"]
remote-inference = ["dep:reqwest"]
python_sdk = ["pyo3"]
custom-allocator = ["mimalloc"]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl", "tikv-jemalloc-ctl/stats"]
wasm = []
advanced-tokenizer = ["dep:tantivy"]
opentelemetry = [
    "dep:opentelemetry",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "opentelemetry_sdk/rt-tokio",
]
governance = ["dep:bloomfilter"]
hot-reload = ["dep:notify"]
encryption = ["dep:aes-gcm", "dep:sha2"]
wal-shipping = ["dep:reqwest"]
pitr = []
server = [
    "cli",
    "dep:tokio",
    "dep:axum",
    "dep:tower_governor",
    "dep:tower-http",
]
tls = ["dep:axum-server", "dep:rustls"]

[dependencies.mimalloc]
version = "0.1"
optional = true

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies.tikv-jemallocator]
version = "0.6"
optional = true

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies.tikv-jemalloc-ctl]
version = "0.6"
optional = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Foundation",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6"
[build-dependencies]
clap = { version = "4.4", features = ["derive", "env"], optional = true }
clap_complete = { version = "4.4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "fs",
    "macros",
    "io-util",
] }
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
tempfile = "3"
proptest = "1.5"
http = "1"
futures = "0.3"
console = "0.16"
indicatif = "0.18"
serial_test = "3.2"

[[bench]]
name = "hybrid_queries"
harness = false

[[bench]]
name = "high_density"
harness = false

[[bench]]
name = "stress_test"
harness = false

[[bench]]
name = "hnsw_pure"
harness = false

[[bench]]
name = "bench_concurrent"
harness = false

[[bench]]
name = "backend_compare"
harness = false

[[bench]]
name = "hnsw_recall_ef"
harness = false

[[bin]]
name = "vanta-cli"
path = "src/bin/vanta-cli.rs"
test = false
required-features = ["cli"]

[[bin]]
name = "lock_helper"
path = "src/bin/lock_helper.rs"
test = false

[[bin]]
name = "crash_helper"
path = "src/bin/crash_helper.rs"
test = false

# ── Integration Tests ─────────────────────────────────────────────
[[test]]
name = "regression_certification"
path = "tests/core/regression_certification.rs"

[[test]]
name = "basic_node"
path = "tests/core/basic_node.rs"

[[test]]
name = "integration"
path = "tests/logic/integration.rs"


[[test]]
name = "vector_scale_check"
path = "tests/core/vector_scale_check.rs"

[[test]]
name = "mutations"
path = "tests/storage/mutations.rs"

[[test]]
name = "core_invariants"
path = "tests/storage/core_invariants.rs"

[[test]]
name = "tombstone_ann_vstore"
path = "tests/storage/tombstone_ann_vstore.rs"

[[test]]
name = "chaos_integrity"
path = "tests/storage/chaos_integrity.rs"
required-features = ["failpoints"]

[[test]]
name = "parser"
path = "tests/logic/parser.rs"

[[test]]
name = "executor"
path = "tests/logic/executor.rs"

[[test]]
name = "graph"
path = "tests/core/graph.rs"

[[test]]
name = "storage"
path = "tests/storage/storage.rs"

[[test]]
name = "hnsw"
path = "tests/core/hnsw.rs"

[[test]]
name = "snapshot_certification"
path = "tests/core/snapshot_certification.rs"

[[test]]
name = "gc"
path = "tests/storage/gc.rs"

[[test]]
name = "governor"
path = "tests/logic/governor.rs"


[[test]]
name = "hardware_profiles"
path = "tests/certification/hardware_profiles.rs"

[[test]]
name = "structured_api_v2"
path = "tests/api/structured_api_v2.rs"

[[test]]
name = "columnar"
path = "tests/logic/columnar.rs"
required-features = ["arrow"]

[[test]]
name = "mmap_index"
path = "tests/storage/mmap_index.rs"

[[test]]
name = "mmap_hnsw"
path = "tests/memory/mmap_hnsw.rs"
required-features = ["cli"]

[[test]]
name = "antilocality_layout"
path = "tests/storage/antilocality_layout.rs"


[[test]]
name = "stress_protocol"
path = "tests/certification/stress_protocol.rs"

[[test]]
name = "hnsw_validation"
path = "tests/certification/hnsw_validation.rs"

[[test]]
name = "hnsw_recall_certification"
path = "tests/certification/hnsw_recall.rs"

[[test]]
name = "sift_validation"
path = "tests/certification/sift_validation.rs"

[[test]]
name = "competitive_bench"
path = "tests/certification/competitive_bench.rs"

[[test]]
name = "hybrid_retrieval_quality"
path = "tests/certification/hybrid_retrieval_quality.rs"

[[test]]
name = "hybrid_ranking_metrics"
path = "tests/certification/hybrid_ranking_metrics.rs"
required-features = ["cli"]

[[test]]
name = "backend_tests"
path = "tests/storage/backend_tests.rs"

[[test]]
name = "wal_resilience"
path = "tests/storage/wal_resilience.rs"

[[test]]
name = "durability_recovery"
path = "tests/durability_recovery.rs"

[[test]]
name = "index_reconstruction"
path = "tests/index_reconstruction.rs"

[[test]]
name = "schema_evolution"
path = "tests/schema_evolution.rs"

[[test]]
name = "concurrency_parity"
path = "tests/concurrency_parity.rs"

[[test]]
name = "python_sdk_boundary"
path = "tests/api/python.rs"

[[test]]
name = "memory_telemetry"
path = "tests/memory_telemetry.rs"

[[test]]
name = "memory_api"
path = "tests/memory_api.rs"

[[test]]
name = "memory_export_import"
path = "tests/memory_export_import.rs"

[[test]]
name = "derived_indexes"
path = "tests/derived_indexes.rs"

[[test]]
name = "memory_brutality"
path = "tests/memory_brutality.rs"

[[test]]
name = "derived_index_prefix_scan"
path = "tests/derived_index_prefix_scan.rs"

[[test]]
name = "derived_index_recovery"
path = "tests/derived_index_recovery.rs"

[[test]]
name = "operational_metrics"
path = "tests/operational_metrics.rs"

[[test]]
name = "text_index_recovery"
path = "tests/text_index_recovery.rs"

[[test]]
name = "version_coherence"
path = "tests/version_coherence.rs"

[[test]]
name = "cli_tests"
path = "tests/cli_tests.rs"
required-features = ["cli"]

[[test]]
name = "file_locking_stress"
path = "tests/file_locking_stress.rs"
required-features = ["cli"]

[[test]]
name = "benchmark_internal"
path = "tests/benchmark_internal.rs"

[[test]]
name = "prefetch_benchmark"
path = "tests/prefetch_benchmark.rs"
required-features = ["cli"]

[[test]]
name = "multi_process_lock"
path = "tests/storage/multi_process_lock.rs"

[[test]]
name = "crash_injection"
path = "tests/storage/crash_injection.rs"

[[test]]
name = "benchmark_datasets"
path = "tests/benchmark_datasets.rs"
required-features = ["cli"]

[[test]]
name = "edge_cases"
path = "tests/edge_cases.rs"

[[test]]
name = "memory"
path = "tests/memory/backpressure.rs"

[[test]]
name = "memory_eviction"
path = "tests/memory/eviction.rs"

[[test]]
name = "fjall_cold_copy_restore"
path = "tests/fjall_cold_copy_restore.rs"

[[test]]
name = "property_durability"
path = "tests/property_durability.rs"

[[test]]
name = "fuzz_proptest"
path = "tests/fuzz_proptest.rs"

[[test]]
name = "multilingual_tokenizer_integration"
path = "tests/multilingual_tokenizer_integration.rs"

[[test]]
name = "security_audit"
path = "tests/security/security_audit.rs"

# ── Examples ──
[[example]]
name = "basic"
path = "examples/rust/basic.rs"

[[example]]
name = "hybrid"
path = "examples/rust/hybrid.rs"

[[example]]
name = "graphrag"
path = "examples/rust/graphrag.rs"

[[example]]
name = "concurrent"
path = "examples/rust/concurrent.rs"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

# Fast dev profile: balance between compilation speed and runtime performance.
# opt-level=1 gives ~35% faster builds than 0 while keeping debug usable.
# debug=1 emits line tables only (no full debug var info).
[profile.dev]
opt-level = 1
debug = 0
strip = "none"

# CI profile: release-like but without LTO for faster CI builds.
[profile.ci]
inherits = "release"
lto = "off"
codegen-units = 16
opt-level = 2

[workspace]
members = [
    ".",
    "vantadb-python",
    "vantadb-server",
    "vantadb-mcp",
    "vantadb-wasm",
    "vantadb-mem0",
    "vantadb-letta",
    "vantadb-crewai",
    "vantadb-dspy",
    "vantadb-haystack",
    "vantadb-litellm",
    "vantadb-openai",
    "vantadb-ollama",
    "vantadb-enterprise",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.94.1"
exclude = ["fuzz"]
# fuzz/ is intentionally outside the workspace: cargo-fuzz requires nightly + Linux sanitizers.
# Run with: cargo +nightly fuzz run <target>  (in the fuzz/ directory on Linux)

[profile.test]
debug = 1
opt-level = 0

[profile.release.package.vantadb-wasm]
opt-level = "s"
strip = true
codegen-units = 1
