[package]
name = "vantadb-dspy"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "DSPy retrieval module adapter for VantaDB — use VantaDB as a RetrieverModel for DSPy programs"
publish = false

[lib]
name = "vantadb_dspy"
crate-type = ["cdylib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
vantadb = { path = "..", default-features = false, features = ["fjall", "memmap2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

pyo3 = { version = "0.29", optional = true, features = ["extension-module"] }
chrono = { version = "0.4", features = ["serde"] }
