[package]
name = "vantadb-dspy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "DSPy retrieval module adapter for VantaDB — use VantaDB as a RetrieverModel for DSPy programs"
publish = false

[lib]
name = "vantadb_dspy"
crate-type = ["cdylib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
vantadb = { path = "..", default-features = false, features = ["fjall", "memmap2"] }
pyo3 = { version = "0.29", optional = true, features = ["extension-module"] }
