[package]
name = "vantadb-enterprise"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "Proprietary"
description = "Enterprise features for VantaDB — proprietary license required"
repository = "https://github.com/ness-e/Vantadb"

[dependencies]
vantadb = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[package.metadata.cargo-machete]
ignored = ["vantadb"]

[features]
default = []
encryption = []
audit-log = []
rbac = []
replication = []

[lib]
name = "vantadb_enterprise"
path = "src/lib.rs"
