[package]
name = "vantadb-haystack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Haystack DocumentStore adapter for VantaDB — use VantaDB as a drop-in document store for Haystack pipelines"
publish = false

[lib]
name = "vantadb_haystack"
crate-type = ["cdylib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
vantadb = { path = "..", default-features = false, features = ["fjall", "memmap2"] }
pyo3 = { version = "0.29", optional = true, features = ["extension-module"] }

[lints]
workspace = true
