[package]
name = "vantadb-litellm"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "LiteLLM embedding gateway + VantaDB storage — unified embedding provider with local vector search"
publish = false

[lib]
name = "vantadb_litellm"
crate-type = ["cdylib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
vantadb = { path = "..", default-features = false, features = ["fjall", "memmap2"] }
pyo3 = { version = "0.29", optional = true, features = ["extension-module"] }
