[package]
name = "vantadb-mcp"
version = "0.1.4"
edition = "2021"
description = "Autocontained Model Context Protocol (MCP) interface for VantaDB"
publish = false

[dependencies]
vantadb = { path = "../", features = ["cli"] }
tokio = { version = "1", features = ["sync", "rt", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
