[package]
name = "vantadb-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Autocontained Model Context Protocol (MCP) interface for VantaDB"
publish = false

[dependencies]
vantadb = { path = "../", features = ["cli"] }
tokio = { version = "1", features = ["sync", "rt", "macros", "rt-multi-thread", "signal", "time", "io-util", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

