[package]
name = "vantadb-ollama"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Ollama local embedding API wrapper + VantaDB storage — generate embeddings via Ollama and store/search them in VantaDB"
publish = false

[lib]
name = "vantadb_ollama"
crate-type = ["cdylib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
vantadb = { path = "..", default-features = false, features = ["fjall", "memmap2"] }
pyo3 = { version = "0.29", optional = true, features = ["extension-module"] }

[lints]
workspace = true
