[package]
name = "vantadb-openai"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "OpenAI embedding API wrapper + VantaDB storage — generate embeddings via OpenAI and store/search them in VantaDB"
publish = false

[lib]
name = "vantadb_openai"
crate-type = ["cdylib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
vantadb = { path = "..", default-features = false, features = ["fjall", "memmap2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

pyo3 = { version = "0.29", optional = true, features = ["extension-module"] }
chrono = { version = "0.4", features = ["serde"] }
