[package]
name = "vantadb-openai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "OpenAI embedding API wrapper + VantaDB storage — generate embeddings via OpenAI and store/search them in VantaDB"
publish = false

[lib]
name = "vantadb_openai"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
vantadb = { path = "..", default-features = false, features = ["fjall", "memmap2"] }
pyo3 = { version = "0.29", optional = true, features = ["extension-module"] }

[lints]
workspace = true
