[package]
name = "vantadb_py"
version = "0.1.4"
edition = "2021"
description = "VantaDB Python SDK: source-installed embedded persistent memory bindings"
license = "Apache-2.0"

[lib]
name = "vantadb_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3-py38", "chrono"] }
serde_json = "1.0"
rayon = "1.12"
chrono = { version = "0.4", features = ["serde"] }

# In-process reference to the core engine (zero network overhead)
vantadb = { path = "../", default-features = false }
