[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "vantadb-py"
version = "0.1.0"
description = "VantaDB: source-installed embedded persistent memory bindings."
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "VantaDB Team"}
]
keywords = ["database", "vector", "graph", "ai", "embeddings"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/DevpNess/Vantadb"
Repository = "https://github.com/DevpNess/Vantadb"

[tool.maturin]
features = ["pyo3/extension-module"]
